static/css/custom.css
/* ... */
.quire-cover__overlay.upper-left img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.upper-left img:nth-of-type(2) {
  animation-delay: 8s;
}
.quire-cover__overlay.upper-left img:nth-of-type(3) {
  animation-delay: 6s;
}
.quire-cover__overlay.upper-left img:nth-of-type(4) {
  animation-delay: 4s;
}
.quire-cover__overlay.upper-left img:nth-of-type(5) {
  animation-delay: 2s;
}
.quire-cover__overlay.upper-left img:nth-of-type(6) {
  animation-delay: 0;
}

.quire-cover__overlay.upper-right img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.upper-right img:nth-of-type(2) {
  animation-delay: 10s;
}
.quire-cover__overlay.upper-right img:nth-of-type(3) {
  animation-delay: 8s;
}
.quire-cover__overlay.upper-right img:nth-of-type(4) {
  animation-delay: 6s;
}
.quire-cover__overlay.upper-right img:nth-of-type(5) {
  animation-delay: 4s;
}
.quire-cover__overlay.upper-right img:nth-of-type(6) {
  animation-delay: 2s;
}

.quire-cover__overlay.lower-right img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.lower-right img:nth-of-type(2) {
  animation-delay: 12s;
}
.quire-cover__overlay.lower-right img:nth-of-type(3) {
  animation-delay: 10s;
}
.quire-cover__overlay.lower-right img:nth-of-type(4) {
  animation-delay: 8s;
}
.quire-cover__overlay.lower-right img:nth-of-type(5) {
  animation-delay: 6s;
}
.quire-cover__overlay.lower-right img:nth-of-type(6) {
  animation-delay: 4s;
}

.quire-cover__overlay.lower-left img:nth-of-type(1) {
  animation-name: none;
}
.quire-cover__overlay.lower-left img:nth-of-type(2) {
  animation-delay: 14s;
}
.quire-cover__overlay.lower-left img:nth-of-type(3) {
  animation-delay: 12s;
}
.quire-cover__overlay.lower-left img:nth-of-type(4) {
  animation-delay: 10s;
}
.quire-cover__overlay.lower-left img:nth-of-type(5) {
  animation-delay: 8s;
}
.quire-cover__overlay.lower-left img:nth-of-type(6) {
  animation-delay: 6s;
}
.hero-body .container.is-fluid {
  background-color: #b44a3a;
}
.quire-cover__hero .title,
.quire-cover__hero .contributor {
  font-family: "Noto Sans", sans-serif;
  font-weight: normal;
  letter-spacing: 0;
}
.quire-cover__hero .contributor {
  margin-top: 1.5rem;
}

/* add contributors to cover content area for mobile devices only */
.mobile-contributor {
  display: none;
  text-align: center;
  margin-bottom: 1rem;
  font-weight: bold;
}

/* Soften black on down arrow circle */
.quire-cover__more .hero-more {
  background: #333;
}

@media screen and (max-width: 689px){
  .quire-cover__hero {
    overflow: hidden;
  }
  .quire-cover__overlay {
    width: 100%;
    /* make the top images 40% height */
    height: calc((95vh - 3rem) * .4);
    min-height: calc((95vh - 3rem) * .4);
  }
  .quire-cover__overlay img {
    /* show more of the image */
    object-fit: cover;
  }
  .quire-cover__overlay.upper-left,
  .quire-cover__overlay.lower-left {
    left: -50vw;
  }
  .quire-cover__overlay.upper-right,
  .quire-cover__overlay.lower-right {
    margin-right: -50vw;
  }
  .quire-cover__overlay.lower-left,
  .quire-cover__overlay.lower-right {
    top: 40%;
    /* make the bottom images 60% height */
    height: calc((95vh - 3rem) * .6);
    min-height: calc((95vh - 3rem) * .6);
  }
  /* aadjust spacing and display on title/subtitle block */
  .hero-body .container.is-fluid {
    bottom: 0%;
    margin: 0;
    padding-bottom: 40px;
    text-align: center;
  }
  .quire-cover__hero .title {
    margin: 0;
  }
  .quire-cover__hero .subtitle {
    line-height: 1.35;
  }
  /* hide contributor in title block */
  .quire-cover__hero .contributor {
    display: none;
  }
  /* display contributor in content area */
  .mobile-contributor {
    display: block;
  }
}

/* COPYRIGHT PAGE
============================================================================= */

@media print {
  #copyright .quire-page.quire-page--frontmatter {
    page: no-footer;
  }
  #copyright .quire-page__header {
    display: none;
  }
  #copyright .quire-page__content {
    column-count: 2;
    column-gap: .1875in;
    column-fill: auto;
    max-width: 100%;
    height: 100%;
    margin: 0;
    text-align: left;
  }
  #copyright img {
    height: .25in;
  }
}

/* Styling for Ancient Worlds Now logo and tagline */
.awn-logo {
  max-width: 300px;
  margin-top: 6rem;
}
@media print {
  #copyright img[alt="awn-logo"] {
    height: 1.325in;
    position: fixed;
    bottom: 0;
    left: 0;
  }
}
  
/* GLOSSARY
============================================================================= */
.content ul.quire-glossary__key {
  margin-left: 0;
  text-align: center;
  display: table;
  margin-bottom: 2rem;
}
.quire-page__content .container .content ul.quire-glossary__key li::before {
  content: "";
}
.quire-page__content .container .content ul.quire-glossary__key li {
  margin: .5rem .75rem;
  display: inline-block;
}
.quire-page__content .content dl.quire-glossary {
  margin: 2rem 0;
}
.quire-page__content .content dl.quire-glossary dt {
  display: inline;
}
.quire-page__content .content dl.quire-glossary dd {
  display: inline;
}
.quire-page__content .content dl.quire-glossary dd::after {
  content: " ";
  display: block;
  margin-bottom: 1rem;
}
/* ... */

